<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_my_quote"
        android:textSize="16sp"
        android:id="@+id/my_quote_button"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_edit_button"
        android:textSize="16sp"
        android:id="@+id/edit_button"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_delete_button"
        android:textSize="16sp"
        android:id="@+id/hapus_button"/>



</LinearLayout>
