<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.d3ifcool.timework.ScheduleActivity"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/text_add_schedule"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_add"
            android:id="@+id/add"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/text_day"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/default_day"
            android:textColor="#085969"
            android:textStyle="italic"
            android:id="@+id/days_textview"
            android:onClick="showListDays"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#456790"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_button_start"
                    android:layout_gravity="center"
                    android:textColor="#fff"
                    android:onClick="startTime"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_default_time"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:id="@+id/start_time_textview"/>

            </LinearLayout>

            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:src="@drawable/divider_background"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_button_end"
                    android:textColor="#fff"
                    android:layout_gravity="center"
                    android:onClick="endTime"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_default_time"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:id="@+id/end_time_textview"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_info"
                android:textSize="16sp"/>
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:id="@+id/active"
                android:layout_marginStart="16dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="right"
            tools:ignore="RtlHardcoded">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_button_reset"
                android:onClick="reset"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/database_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_text_button"
                android:onClick="addToDatabase"
                tools:ignore="ButtonStyle" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>
