<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.d3ifcool.timework.AddQuoActivity"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/text_add_quotes"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_edit"
            android:id="@+id/quote_edit_text"/>


    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            tools:ignore="UselessParent"
            android:layout_alignParentEnd="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_text_button"
                android:onClick="reset"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/database_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_text_button"
                android:onClick="addQuotes"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>

